Sculpt: Color Filter crash #117824

Closed
opened 2024-02-05 06:05:41 +01:00 by TheRedWaxPolice · 8 comments

System Information
Operating system: Win 10

Blender Version
Broken: blender-4.1.0-alpha+main.d73628a3cda4-windows.amd64-release
Worked: Dunno... even 4.0 and 3.6 are crashing as well...

Short description of error
Blender crashes after using the color filter and then undo and redo

Exact steps for others to reproduce the error

  • File/New/Sculpting
  • Choose the Color Filter tool... pick a color... then click and drag in the viewport from left to right to fill the object with the color
  • Undo
  • Redo

Crash.....

**System Information** Operating system: Win 10 **Blender Version** Broken: blender-4.1.0-alpha+main.d73628a3cda4-windows.amd64-release Worked: Dunno... even 4.0 and 3.6 are crashing as well... **Short description of error** Blender crashes after using the color filter and then undo and redo **Exact steps for others to reproduce the error** - File/New/Sculpting - Choose the Color Filter tool... pick a color... then click and drag in the viewport from left to right to fill the object with the color - Undo - Redo Crash..... <video controls="" src="https://projects.blender.org/attachments/416be974-8c06-4985-a632-5049878a6f05"></video>
TheRedWaxPolice added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2024-02-05 06:05:42 +01:00
Member

Thanks for the report. Can confirm the crash in 3.2-4.1

Thanks for the report. Can confirm the crash in 3.2-4.1
Pratik Borhade added
Module
Sculpt, Paint & Texture
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-02-05 06:28:32 +01:00
Member

After undo color attribute is null as we jump to original undo step.
Performing redo operation afterwards keeps the color-attribute null. I think this is because the color attribute is not stored in sculpt-undo step. or is it deleted already from the file after the initial undo operation?

After undo `color attribute` is null as we jump to [original](/attachments/e97c7d48-f93d-4fb8-89fe-911b7d6342a2) undo step. Performing redo operation afterwards keeps the color-attribute null. I think this is because the color attribute is not stored in sculpt-undo step. or is it deleted already from the file after the initial undo operation?
Philipp Oeser added the
Interest
Undo
label 2024-02-06 09:40:16 +01:00

i was going to report that bug. glad i did a search before.
but whats going on, crashes are not high priority anymore?
new rules?

i was going to report that bug. glad i did a search before. but whats going on, crashes are not high priority anymore? new rules?
Member

Not all crashes need to be considered as High priority

The rule from https://developer.blender.org/docs/handbook/bug_reports/triaging_playbook/ says

"High - Most crashes and recent regressions."

There are many crashes that are sort of expected even (e.g. messing around with the python API is certain ways).

However, @JulienKaspar : would you consider this High priority?

Not all crashes need to be considered as High priority The rule from https://developer.blender.org/docs/handbook/bug_reports/triaging_playbook/ says "High - Most crashes and recent regressions." There are many crashes that are sort of expected even (e.g. messing around with the python API is certain ways). However, @JulienKaspar : would you consider this High priority?

@lichtwerk i mean, a crash after undoing and redoing seems pretty serious to me.

additionally, i just spotted another issue.
following the steps in the first post to reproduce the crash, if before you apply the color filter you do something, like a brush stroke, then apply the filter, then undo and redo, some weird lines appear on the mesh. please see the video

and if you undo twice and then redo it crashes
something is really broken there

@lichtwerk i mean, a crash after undoing and redoing seems pretty serious to me. additionally, i just spotted another issue. following the steps in the first post to reproduce the crash, if before you apply the color filter you do something, like a brush stroke, then apply the filter, then undo and redo, some weird lines appear on the mesh. please see the video <video controls="" src="https://projects.blender.org/attachments/fc62f5a1-e9b4-4f9d-9fbd-8cb3bf791877"></video> and if you undo twice and then redo it crashes something is really broken there
Member

some weird lines appear on the mesh

Best to open a separate report for this 😅

if you undo twice and then redo it crashes

Reason is same that I mentioned in previous comment

> some weird lines appear on the mesh Best to open a separate report for this 😅 > if you undo twice and then redo it crashes Reason is same that I mentioned in previous comment

Best to open a separate report for this 😅

ok

Reason is same that I mentioned in previous comment

i dont fully understand what you mean in your previous comment tbh

> Best to open a separate report for this 😅 ok > Reason is same that I mentioned in previous comment i dont fully understand what you mean in your previous comment tbh
Hans Goudey added
Severity
High
Type
Bug
and removed
Severity
Normal
Type
Report
labels 2024-02-08 05:16:49 +01:00

Can confirm this bug. On undo history going back to the original state fails to restore the color of any future state.
The pbvh->color_layer is null when going back to the original state
I suspect a bug the way that first undo step is handled for sculpt filter color
Investigating it further.

Can confirm this bug. On undo history going back to the original state fails to restore the color of any future state. The pbvh->color_layer is null when going back to the original state I suspect a bug the way that first undo step is handled for sculpt filter color Investigating it further.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-04 16:32:09 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117824
No description provided.